--- a/optigra-ads-web-client/app/index.html
+++ b/optigra-ads-web-client/app/index.html
@@ -37,7 +37,7 @@
         </script>
 
         <!-- build:js scripts/main.js -->
-        <script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
+        <script data-main="scripts/init" src="bower_components/requirejs/require.js"></script>
         <!-- endbuild -->
 </body>
 </html>
