Added dummy login page

--- a/optigra-ads-rest-api/src/main/webapp/public/index.html
+++ b/optigra-ads-rest-api/src/main/webapp/public/index.html
@@ -10,7 +10,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <link rel="stylesheet" href="styles/b31ab1a2.main.css">
+        <link rel="stylesheet" href="styles/d724e3b6.main.css">
         <script src="scripts/vendor/d7100892.modernizr.js"></script>
     </head>
     <body>
@@ -19,7 +19,35 @@
         <![endif]-->
 
 
-        <h1>Test page</h1>
+   <div id="wrapper" style="padding-left: 0px; padding-right: 0px; width: 400px; margin: 0 auto">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="panel panel-primary">
+              <div class="panel-heading">
+                <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Optigra Ads - Login</h3>
+              </div>
+              <div class="panel-body">
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="fa fa-user"></i></span>
+                    <input type="text" class="form-control" placeholder="Username">
+                </div>
+                <br>
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="fa fa-lock"></i></span>
+                    <input type="text" class="form-control" placeholder="Password">
+                </div>
+                
+                <p style="margin-top: 20px; float: right">
+                    <a href="#" class="btn btn-primary" role="button">Sign in</a>
+                    <a href="#" class="btn btn-default" role="button">Register</a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div><!-- /.row -->
+
+    </div><!-- /#wrapper -->
+
     
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
@@ -32,6 +60,6 @@
             ga('create','UA-XXXXX-X');ga('send','pageview');
         </script>
 
-        <script data-main="scripts/0e2cd88e.main" src="bower_components/requirejs/require.js"></script>
+        <script data-main="scripts/48ee9cd5.main" src="bower_components/requirejs/require.js"></script>
 </body>
 </html>
