--- a/optigra-ads-web-client/app/index.html
+++ b/optigra-ads-web-client/app/index.html
@@ -23,7 +23,35 @@
         <![endif]-->
 
 
-        <h1>Test page</h1>
+   <div id="wrapper" style = "padding-left: 0px; padding-right: 0px; width: 400px; margin: 0 auto;">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="panel panel-primary">
+              <div class="panel-heading">
+                <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Optigra Ads - Login</h3>
+              </div>
+              <div class="panel-body">
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="fa fa-user"></i></span>
+                    <input type="text" class="form-control" placeholder="Username">
+                </div>
+                <br />
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="fa fa-lock"></i></span>
+                    <input type="text" class="form-control" placeholder="Password">
+                </div>
+                
+                <p style="margin-top: 20px; float: right;">
+                    <a href="#" class="btn btn-primary" role="button">Sign in</a>
+                    <a href="#" class="btn btn-default" role="button">Register</a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div><!-- /.row -->
+
+    </div><!-- /#wrapper -->
+
     
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
