Implemented pagination for application list.

--- a/optigra-ads-rest-api/src/main/webapp/web-console/home.html
+++ b/optigra-ads-rest-api/src/main/webapp/web-console/home.html
@@ -10,9 +10,10 @@
 	
 	<!-- Javascript -->
 	<script type="text/javascript" src="script/jquery/jquery-1.9.0.js"></script>
-        <script src="js/bootstrap.js"></script>
+	<script type="text/javascript" src="script/util/bootstrap.js"></script>
+	<script type="text/javascript" src="script/util/jquery.bootpag.min.js"></script>
+	
 	<script type="text/javascript" src="script/jquery/jquery-ui-1.10.3.custom.js"></script>
-	<script type="text/javascript" src="script/jquery/plugin/jquery.dataTables.js"></script>
 	<script type="text/javascript" src="script/jquery/plugin/jquery.blockUI.js"></script>
 	<script type="text/javascript" src="script/util/handlebars-1.0.rc.1.js"></script>
     <script type="text/javascript" src="script/util/handlebars-extend.js"></script>  
